goprime-envoy.yaml
static_resources:
  listeners:
  - name: goprime_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8081
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: goprime_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: goprime_service
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
      tls_context:
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: "/etc/ssl/servercerts/servercert.pem"
            private_key:
              filename: "/etc/ssl/servercerts/serverkey.pem"
          validation_context:
            trusted_ca:
              filename: "/etc/opt/novell/certs/SSCert.pem"
            allow_expired_certificate: false
        require_client_certificate: false
  clusters:
  - name: goprime_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: goprime_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 18081
